--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Garamond&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 * {
-  font-family: "Inter", "EB Garamond", system-ui, -apple-system,
-    BlinkMacSystemFont, "Segoe UI", "Alantax", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Inter", "Garamond", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Alantax", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
 }
-
 
 @layer base {
   h3 {
-    font-family: "EB Garamond";
+    font-family: "Garamond";
+    font-weight: 700;
     letter-spacing: 0.5px;
+    line-height: 40px;
   }
+
   p {
     font-family: "Inter";
   }
 }
 
- 
 /* *{
-  border: 1px solid red;
+  border: 1px solid red
 } */
-
-
 
 /* 
 :root {
