Cart Page + Responsiveness updated

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
 /* * {
   border: 1px solid red;
 } */
-
+/* 
 body {
   background: #eee;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -35,7 +35,7 @@ body {
   color: #000;
   margin: 0;
   padding: 0;
-}
+} */
 
 .swiper {
   width: 100%;
